--- a/index.html
+++ b/index.html
@@ -51,6 +51,76 @@
         </button>
       </div>
       <div class="app"></div>
+      <!-- input Field -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                New message
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                  <label for="recipient-name" class="col-form-label"
+                    >Name</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control updateName"
+                    id="recipient-name"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control updateEmail"
+                    id="recipient-name"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label">Age</label>
+                  <input
+                    type="text"
+                    class="form-control updateAge"
+                    id="recipient-name"
+                  />
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                onclick="updateUser(event)"
+              >
+                Send message
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
